--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0"
+    "@jupyterlab/application": "^2.0.0",
+    "@jupyterlab/apputils": "^2.0.0",
+    "@jupyterlab/docregistry": "^2.0.0",
+    "@jupyterlab/mainmenu": "^2.0.0",
+    "@jupyterlab/notebook": "^2.0.0",
+    "@lumino/disposable": "^1.3.5"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
