--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@jupyterlab/application": "^2.0.0",
     "@jupyterlab/apputils": "^2.0.0",
     "@jupyterlab/docregistry": "^2.0.0",
+    "@jupyterlab/fileeditor": "^2.0.0",
     "@jupyterlab/mainmenu": "^2.0.0",
     "@jupyterlab/notebook": "^2.0.0",
     "@lumino/disposable": "^1.3.5"
