--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@jupyterlab/fileeditor": "^2.0.0",
     "@jupyterlab/mainmenu": "^2.0.0",
     "@jupyterlab/notebook": "^2.0.0",
-    "@lumino/disposable": "^1.3.5"
+    "@lumino/disposable": "^1.3.5",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
