--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "rimraf": "^3.0.2",
     "typescript": "~4.1.3"
   },
+  "resolutions": {
+    "**/@lumino/widgets": "1.37.2"
+  },
   "sideEffects": [
     "style/*.css",
     "style/index.js"
