--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true,
-    "target": "es2017",
+    "target": "es2018",
+    "lib": ["es2018", "dom", "dom.iterable"],
     "types": []
   },
   "include": ["src/*"]
